Fix(ui) : homepage - Change background colors according to chart - Fix many positions and spacing to respect chart - Fix font characteristics according to chart

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,24 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display');
-@import url('https://fonts.googleapis.com/css2?family=Inter');
-
-@import "modules/headings.css";
-@import "modules/header.css";
-@import "modules/footer.css";
-@import "modules/form.css";
-@import "modules/card.css";
-@import "modules/cardBook.css";
-@import "modules/poster.css";
-@import "modules/icons-and-badges.css";
-
-@import "pages/homepage.css";
-@import "pages/messagerie.css";
-@import "pages/profile.css";
-@import "pages/book-copy-detail.css";
-@import "pages/book-copy-edit.css";
-@import "pages/sign-in-sign-up.css";
-@import "pages/available-books.css";
-
-
 /* Design System */
 :root {
     --gris-clair: #f5f3ef;
@@ -131,6 +110,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    color: var(--gris-foncé);
     font-family: var(--second-family), sans-serif;
     margin: 0;
 }
@@ -142,6 +122,7 @@ h1 {
 
 h2 {
     font-size: 2rem;
+    font-weight: 400;
 }
 
 h3 {
